--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="P2P Wallet"
 APP_ENV=local
 APP_KEY=base64:/0O8z0GKBmvHWCp0mWEfJbNMx7yis+SjUCBOO7NBbTM=
 APP_DEBUG=true
@@ -10,8 +10,8 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=8889
-DB_DATABASE=mevrik_auth
+DB_PORT=3306
+DB_DATABASE=p2pwallet
 DB_USERNAME=root
 DB_PASSWORD=root
 
